--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Models\DataAccess.cs" />
     <Compile Include="Models\Khach.cs" />
+    <Compile Include="Models\NhanVien.cs" />
     <Compile Include="Models\Phong.cs" />
     <Compile Include="Models\VatDung.cs" />
     <Compile Include="Views\frmChiTietPhong.cs">
