chinh sua co so du lieu,them tabLoaiPhong

--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\DangKy.cs" />
     <Compile Include="Models\DataAccess.cs" />
     <Compile Include="Models\Khach.cs" />
+    <Compile Include="Models\LoaiPhong.cs" />
     <Compile Include="Models\NhanVien.cs" />
     <Compile Include="Models\Phong.cs" />
     <Compile Include="Models\VatDung.cs" />
