gen lai co so du lieu,chinh sua them

--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Models\DangKy.cs" />
-    <Compile Include="Models\DataAccess.cs" />
+    <Compile Include="Controllers\DataAccess.cs" />
     <Compile Include="Models\DichVu.cs" />
     <Compile Include="Models\Khach.cs" />
     <Compile Include="Models\LoaiPhong.cs" />
