--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Controllers\Hepl.cs" />
     <Compile Include="Models\DangKy.cs" />
     <Compile Include="Controllers\DataAccess.cs" />
     <Compile Include="Models\DichVu.cs" />
